--- a/Pear/Controllers/Initial Screens/Landing Screen/Landing Screen View Controller/OldLandingScreenViewController.storyboard
+++ b/Pear/Controllers/Initial Screens/Landing Screen/Landing Screen View Controller/OldLandingScreenViewController.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Landing Screen View Controller-->
+        <!--Old Landing Screen View Controller-->
         <scene sceneID="fu5-Ei-MxZ">
             <objects>
-                <viewController id="WMl-Re-IdG" customClass="LandingScreenViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="WMl-Re-IdG" customClass="OldLandingScreenViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="im2-tZ-rGb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
