--- a/Pear/Controllers/New Redesign/Create User/UserContactPermissionsViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/UserContactPermissionsViewController.storyboard
@@ -1,7 +1,122 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="f0l-qt-hJX">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <customFonts key="customFonts">
+        <array key="Nunito-Regular.ttf">
+            <string>Nunito-Regular</string>
+        </array>
+    </customFonts>
+    <scenes>
+        <!--User Contact Permissions View Controller-->
+        <scene sceneID="Tl7-xR-IGb">
+            <objects>
+                <viewController id="f0l-qt-hJX" customClass="UserContactPermissionsViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zm7-7W-mpR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rzM-ko-2ks">
+                                <rect key="frame" x="0.0" y="56" width="414" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please allow access" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="egO-Y0-AmT">
+                                        <rect key="frame" x="83.5" y="0.5" width="247" height="39"/>
+                                        <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="28"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="egO-Y0-AmT" firstAttribute="centerX" secondItem="rzM-ko-2ks" secondAttribute="centerX" id="Ole-6e-SbL"/>
+                                    <constraint firstAttribute="height" constant="40" id="WxJ-kj-Hz4"/>
+                                    <constraint firstItem="egO-Y0-AmT" firstAttribute="centerY" secondItem="rzM-ko-2ks" secondAttribute="centerY" id="wH6-tn-467"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p6t-xb-Gct">
+                                <rect key="frame" x="0.0" y="104" width="414" height="1"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.050000000000000003" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="cpC-cz-kXD"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-open-sign" translatesAutoresizingMaskIntoConstraints="NO" id="bCQ-GP-ba1">
+                                <rect key="frame" x="117" y="145" width="180" height="180"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="180" id="AqJ-zV-7WC"/>
+                                    <constraint firstAttribute="width" secondItem="bCQ-GP-ba1" secondAttribute="height" multiplier="1:1" id="hls-Pc-T5v"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bX-ac-HTa">
+                                <rect key="frame" x="30" y="333" width="354" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYV-it-c8L">
+                                <rect key="frame" x="81" y="438" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RaF-Ys-2WK">
+                                <rect key="frame" x="20" y="792" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="OGO-5N-kJc"/>
+                                </constraints>
+                                <state key="normal" title="Enable Contacts"/>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-contact-book" translatesAutoresizingMaskIntoConstraints="NO" id="M7V-NN-5YJ">
+                                <rect key="frame" x="40" y="792" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="M7V-NN-5YJ" secondAttribute="height" multiplier="1:1" id="fji-Ah-v80"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="p6t-xb-Gct" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" id="0iX-PN-haY"/>
+                            <constraint firstItem="bCQ-GP-ba1" firstAttribute="centerX" secondItem="5Rc-dw-jwb" secondAttribute="centerX" id="0yK-9G-eDN"/>
+                            <constraint firstItem="bCQ-GP-ba1" firstAttribute="top" secondItem="p6t-xb-Gct" secondAttribute="bottom" constant="40" id="7AZ-pT-2ep"/>
+                            <constraint firstItem="8bX-ac-HTa" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" constant="30" id="7bu-2v-4j8"/>
+                            <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="8bX-ac-HTa" secondAttribute="trailing" constant="30" id="9vo-Ia-ksH"/>
+                            <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="p6t-xb-Gct" secondAttribute="trailing" id="Jih-Ul-qfM"/>
+                            <constraint firstItem="8bX-ac-HTa" firstAttribute="centerX" secondItem="5Rc-dw-jwb" secondAttribute="centerX" id="dPd-o8-VYG"/>
+                            <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="rzM-ko-2ks" secondAttribute="trailing" id="fsl-3h-Iy1"/>
+                            <constraint firstItem="M7V-NN-5YJ" firstAttribute="centerY" secondItem="RaF-Ys-2WK" secondAttribute="centerY" id="gDp-cr-o3V"/>
+                            <constraint firstItem="rzM-ko-2ks" firstAttribute="top" secondItem="5Rc-dw-jwb" secondAttribute="top" constant="12" id="kzr-0E-xMa"/>
+                            <constraint firstItem="8bX-ac-HTa" firstAttribute="top" secondItem="bCQ-GP-ba1" secondAttribute="bottom" constant="8" id="lLD-qH-DHp"/>
+                            <constraint firstItem="p6t-xb-Gct" firstAttribute="centerX" secondItem="5Rc-dw-jwb" secondAttribute="centerX" id="pqU-25-xgg"/>
+                            <constraint firstItem="5Rc-dw-jwb" firstAttribute="bottom" secondItem="RaF-Ys-2WK" secondAttribute="bottom" constant="20" id="rJ6-8x-mn4"/>
+                            <constraint firstItem="M7V-NN-5YJ" firstAttribute="height" secondItem="RaF-Ys-2WK" secondAttribute="height" id="uQr-zI-2ml"/>
+                            <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="RaF-Ys-2WK" secondAttribute="trailing" constant="20" id="vfF-XO-ml7"/>
+                            <constraint firstItem="p6t-xb-Gct" firstAttribute="top" secondItem="rzM-ko-2ks" secondAttribute="bottom" constant="8" id="weQ-tS-XYj"/>
+                            <constraint firstItem="RaF-Ys-2WK" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" constant="20" id="yFt-Yz-N1z"/>
+                            <constraint firstItem="rzM-ko-2ks" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" id="yXh-Ie-HVT"/>
+                            <constraint firstItem="M7V-NN-5YJ" firstAttribute="leading" secondItem="RaF-Ys-2WK" secondAttribute="leading" constant="20" id="ycY-mk-yc3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5Rc-dw-jwb"/>
+                    </view>
+                    <connections>
+                        <outlet property="enableContactsButton" destination="RaF-Ys-2WK" id="CBE-Sp-STZ"/>
+                        <outlet property="numberProfilesLabel" destination="8bX-ac-HTa" id="qQL-fe-uRr"/>
+                        <outlet property="titleLabel" destination="egO-Y0-AmT" id="Wle-hg-Mwh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wEp-xp-PtA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="676.81159420289862" y="-290.625"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="icon-contact-book" width="135" height="135"/>
+        <image name="onboarding-open-sign" width="504" height="504"/>
+    </resources>
 </document>
