--- a/Pear/Controllers/New Redesign/Create User/UserContactPermissionsViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/UserContactPermissionsViewController.storyboard
@@ -13,6 +13,12 @@
         <array key="Nunito-Regular.ttf">
             <string>Nunito-Regular</string>
         </array>
+        <array key="OpenSans-Bold.ttf">
+            <string>OpenSans-Bold</string>
+        </array>
+        <array key="OpenSans-SemiBold.ttf">
+            <string>OpenSans-SemiBold</string>
+        </array>
     </customFonts>
     <scenes>
         <!--User Contact Permissions View Controller-->
@@ -59,13 +65,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYV-it-c8L">
-                                <rect key="frame" x="81" y="438" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RaF-Ys-2WK">
                                 <rect key="frame" x="20" y="792" width="374" height="50"/>
                                 <constraints>
@@ -79,6 +78,83 @@
                                     <constraint firstAttribute="width" secondItem="M7V-NN-5YJ" secondAttribute="height" multiplier="1:1" id="fji-Ah-v80"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Pp-0I-vb7">
+                                <rect key="frame" x="20" y="380.5" width="374" height="399.5"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nrj-hZ-Nj2">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="399.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LatestRoastBoastTVC" rowHeight="113" id="96l-gz-M7G" customClass="LatestRoastBoastTableViewCell" customModule="Pear" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="374" height="113"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="96l-gz-M7G" id="hYA-vY-w4e">
+                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="112.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pTM-H8-3RB">
+                                                            <rect key="frame" x="4" y="4" width="50" height="50"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="50" id="Pbt-9o-DMU"/>
+                                                                <constraint firstAttribute="width" secondItem="pTM-H8-3RB" secondAttribute="height" multiplier="1:1" id="q4L-re-qws"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8l-PG-huu">
+                                                            <rect key="frame" x="62" y="5.5" width="38" height="19.5"/>
+                                                            <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XcN-I4-I4Y">
+                                                            <rect key="frame" x="326.5" y="4" width="43.5" height="22"/>
+                                                            <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
+                                                            <color key="textColor" white="0.0" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fxa-xs-sRP">
+                                                            <rect key="frame" x="62" y="33" width="284" height="57"/>
+                                                            <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="18"/>
+                                                            <color key="textColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="XcN-I4-I4Y" secondAttribute="trailing" constant="4" id="1gQ-sc-N2k"/>
+                                                        <constraint firstItem="k8l-PG-huu" firstAttribute="centerY" secondItem="XcN-I4-I4Y" secondAttribute="centerY" id="A0j-Dh-OZV"/>
+                                                        <constraint firstItem="pTM-H8-3RB" firstAttribute="top" secondItem="hYA-vY-w4e" secondAttribute="top" constant="4" id="DGX-Dh-gqB"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="Fxa-xs-sRP" secondAttribute="trailing" constant="8" id="HWC-5m-GZg"/>
+                                                        <constraint firstItem="Fxa-xs-sRP" firstAttribute="top" secondItem="k8l-PG-huu" secondAttribute="bottom" constant="8" id="XUu-Eo-bHB"/>
+                                                        <constraint firstItem="k8l-PG-huu" firstAttribute="leading" secondItem="pTM-H8-3RB" secondAttribute="trailing" constant="8" id="oig-3O-chA"/>
+                                                        <constraint firstItem="Fxa-xs-sRP" firstAttribute="leading" secondItem="k8l-PG-huu" secondAttribute="leading" id="qpO-eN-Jx0"/>
+                                                        <constraint firstItem="XcN-I4-I4Y" firstAttribute="top" secondItem="hYA-vY-w4e" secondAttribute="top" constant="4" id="rBX-Sj-59r"/>
+                                                        <constraint firstAttribute="bottomMargin" secondItem="Fxa-xs-sRP" secondAttribute="bottom" constant="12" id="vMA-YK-NII"/>
+                                                        <constraint firstItem="pTM-H8-3RB" firstAttribute="leading" secondItem="hYA-vY-w4e" secondAttribute="leading" constant="4" id="yww-hh-EGb"/>
+                                                    </constraints>
+                                                </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="contentLabel" destination="Fxa-xs-sRP" id="bEK-i6-a4E"/>
+                                                    <outlet property="roastBoastImage" destination="pTM-H8-3RB" id="CbL-QS-DMp"/>
+                                                    <outlet property="timestampLabel" destination="XcN-I4-I4Y" id="rKI-8P-NAf"/>
+                                                    <outlet property="titleLabel" destination="k8l-PG-huu" id="mDO-cP-ERz"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="nrj-hZ-Nj2" firstAttribute="leading" secondItem="7Pp-0I-vb7" secondAttribute="leading" id="0J6-Nw-0Ij"/>
+                                    <constraint firstAttribute="bottom" secondItem="nrj-hZ-Nj2" secondAttribute="bottom" id="HUl-ys-OwR"/>
+                                    <constraint firstAttribute="trailing" secondItem="nrj-hZ-Nj2" secondAttribute="trailing" id="Jza-io-JcQ"/>
+                                    <constraint firstItem="nrj-hZ-Nj2" firstAttribute="top" secondItem="7Pp-0I-vb7" secondAttribute="top" id="SRc-4r-MCs"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Latest" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYV-it-c8L">
+                                <rect key="frame" x="20" y="345" width="51" height="23.5"/>
+                                <fontDescription key="fontDescription" name="OpenSans-SemiBold" family="Open Sans SemiBold" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -87,7 +163,11 @@
                             <constraint firstItem="bCQ-GP-ba1" firstAttribute="top" secondItem="p6t-xb-Gct" secondAttribute="bottom" constant="40" id="7AZ-pT-2ep"/>
                             <constraint firstItem="8bX-ac-HTa" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" constant="30" id="7bu-2v-4j8"/>
                             <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="8bX-ac-HTa" secondAttribute="trailing" constant="30" id="9vo-Ia-ksH"/>
+                            <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="7Pp-0I-vb7" secondAttribute="trailing" constant="20" id="DYG-9T-BcR"/>
+                            <constraint firstItem="qYV-it-c8L" firstAttribute="leading" secondItem="7Pp-0I-vb7" secondAttribute="leading" id="Fj2-Tk-mdv"/>
                             <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="p6t-xb-Gct" secondAttribute="trailing" id="Jih-Ul-qfM"/>
+                            <constraint firstItem="qYV-it-c8L" firstAttribute="top" secondItem="8bX-ac-HTa" secondAttribute="bottom" constant="12" id="Xmw-yq-k4g"/>
+                            <constraint firstItem="RaF-Ys-2WK" firstAttribute="top" secondItem="7Pp-0I-vb7" secondAttribute="bottom" constant="12" id="Xsx-W3-Jd3"/>
                             <constraint firstItem="8bX-ac-HTa" firstAttribute="centerX" secondItem="5Rc-dw-jwb" secondAttribute="centerX" id="dPd-o8-VYG"/>
                             <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="rzM-ko-2ks" secondAttribute="trailing" id="fsl-3h-Iy1"/>
                             <constraint firstItem="M7V-NN-5YJ" firstAttribute="centerY" secondItem="RaF-Ys-2WK" secondAttribute="centerY" id="gDp-cr-o3V"/>
@@ -95,8 +175,10 @@
                             <constraint firstItem="8bX-ac-HTa" firstAttribute="top" secondItem="bCQ-GP-ba1" secondAttribute="bottom" constant="8" id="lLD-qH-DHp"/>
                             <constraint firstItem="p6t-xb-Gct" firstAttribute="centerX" secondItem="5Rc-dw-jwb" secondAttribute="centerX" id="pqU-25-xgg"/>
                             <constraint firstItem="5Rc-dw-jwb" firstAttribute="bottom" secondItem="RaF-Ys-2WK" secondAttribute="bottom" constant="20" id="rJ6-8x-mn4"/>
+                            <constraint firstItem="7Pp-0I-vb7" firstAttribute="top" secondItem="qYV-it-c8L" secondAttribute="bottom" constant="12" id="sFC-jW-NaO"/>
                             <constraint firstItem="M7V-NN-5YJ" firstAttribute="height" secondItem="RaF-Ys-2WK" secondAttribute="height" id="uQr-zI-2ml"/>
                             <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="RaF-Ys-2WK" secondAttribute="trailing" constant="20" id="vfF-XO-ml7"/>
+                            <constraint firstItem="7Pp-0I-vb7" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" constant="20" id="wVY-dg-BLZ"/>
                             <constraint firstItem="p6t-xb-Gct" firstAttribute="top" secondItem="rzM-ko-2ks" secondAttribute="bottom" constant="8" id="weQ-tS-XYj"/>
                             <constraint firstItem="RaF-Ys-2WK" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" constant="20" id="yFt-Yz-N1z"/>
                             <constraint firstItem="rzM-ko-2ks" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" id="yXh-Ie-HVT"/>
