--- a/Pear/Controllers/New Redesign/Create User/UserContactPermissionsViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/UserContactPermissionsViewController.storyboard
@@ -71,6 +71,9 @@
                                     <constraint firstAttribute="height" constant="50" id="OGO-5N-kJc"/>
                                 </constraints>
                                 <state key="normal" title="Enable Contacts"/>
+                                <connections>
+                                    <action selector="enableContactsButtonClicked:" destination="f0l-qt-hJX" eventType="touchUpInside" id="HNN-3b-N1I"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-contact-book" translatesAutoresizingMaskIntoConstraints="NO" id="M7V-NN-5YJ">
                                 <rect key="frame" x="40" y="792" width="50" height="50"/>
