graphql models added

--- a/Pear/Controllers/New Redesign/Create User/ProfileInputVibeViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/ProfileInputVibeViewController.storyboard
@@ -1,7 +1,71 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <customFonts key="customFonts">
+        <array key="Nunito-Regular.ttf">
+            <string>Nunito-Regular</string>
+        </array>
+    </customFonts>
+    <scenes>
+        <!--User Contact List View Controller-->
+        <scene sceneID="Rwq-q9-Ln1">
+            <objects>
+                <viewController id="pr2-9c-pyo" customClass="UserContactListViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zXg-vd-ahz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jAd-YO-Lte">
+                                <rect key="frame" x="0.0" y="56" width="414" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Answer some questions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="UL4-RL-DZt">
+                                        <rect key="frame" x="57" y="0.5" width="300.5" height="39"/>
+                                        <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="28"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="KVn-WM-UyW"/>
+                                    <constraint firstItem="UL4-RL-DZt" firstAttribute="centerX" secondItem="jAd-YO-Lte" secondAttribute="centerX" id="W3v-Eb-cOK"/>
+                                    <constraint firstItem="UL4-RL-DZt" firstAttribute="centerY" secondItem="jAd-YO-Lte" secondAttribute="centerY" id="XMe-i0-zS9"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fex-wJ-9Ii">
+                                <rect key="frame" x="0.0" y="104" width="414" height="1"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.050000000000000003" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="UW2-wS-gJ3"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="jAd-YO-Lte" firstAttribute="leading" secondItem="KB1-SY-aJA" secondAttribute="leading" id="0Nl-P7-Wqt"/>
+                            <constraint firstItem="fex-wJ-9Ii" firstAttribute="top" secondItem="jAd-YO-Lte" secondAttribute="bottom" constant="8" id="9Nw-Af-ebD"/>
+                            <constraint firstItem="KB1-SY-aJA" firstAttribute="trailing" secondItem="fex-wJ-9Ii" secondAttribute="trailing" id="Gxq-Ks-wpT"/>
+                            <constraint firstItem="jAd-YO-Lte" firstAttribute="top" secondItem="KB1-SY-aJA" secondAttribute="top" constant="12" id="PXf-iV-WZd"/>
+                            <constraint firstItem="fex-wJ-9Ii" firstAttribute="centerX" secondItem="KB1-SY-aJA" secondAttribute="centerX" id="kdX-rC-V0N"/>
+                            <constraint firstItem="fex-wJ-9Ii" firstAttribute="leading" secondItem="KB1-SY-aJA" secondAttribute="leading" id="mZ6-pb-I68"/>
+                            <constraint firstItem="KB1-SY-aJA" firstAttribute="trailing" secondItem="jAd-YO-Lte" secondAttribute="trailing" id="rfp-MO-rwm"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="KB1-SY-aJA"/>
+                    </view>
+                    <connections>
+                        <outlet property="titleLabel" destination="UL4-RL-DZt" id="cGW-pK-aKd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ew4-3M-jYh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="676.81159420289862" y="-290.625"/>
+        </scene>
+    </scenes>
 </document>
